--- a/VidRen/VidRen.csproj
+++ b/VidRen/VidRen.csproj
@@ -200,11 +200,20 @@
     <Compile Include="Migrations\201707071801370_InitialModel.Designer.cs">
       <DependentUpon>201707071801370_InitialModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707071808386_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201707071808386_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201707071808386_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707071811463_AddMembershipType.cs" />
+    <Compile Include="Migrations\201707071811463_AddMembershipType.Designer.cs">
+      <DependentUpon>201707071811463_AddMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -294,6 +303,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201707071801370_InitialModel.resx">
       <DependentUpon>201707071801370_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071808386_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201707071808386_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071811463_AddMembershipType.resx">
+      <DependentUpon>201707071811463_AddMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
