--- a/VidRen/VidRen.csproj
+++ b/VidRen/VidRen.csproj
@@ -208,6 +208,14 @@
     <Compile Include="Migrations\201707071811463_AddMembershipType.Designer.cs">
       <DependentUpon>201707071811463_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707071813371_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201707071813371_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201707071813371_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707081059197_ApplyDataAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201707081059197_ApplyDataAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201707081059197_ApplyDataAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -309,6 +317,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707071811463_AddMembershipType.resx">
       <DependentUpon>201707071811463_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707071813371_PopulateMembershipTypes.resx">
+      <DependentUpon>201707071813371_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707081059197_ApplyDataAnnotationsToCustomerName.resx">
+      <DependentUpon>201707081059197_ApplyDataAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
