--- a/VidRen/VidRen.csproj
+++ b/VidRen/VidRen.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\201707081119036_AddNameToMembershipType.Designer.cs">
       <DependentUpon>201707081119036_AddNameToMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707081121479_SetNameOfMembershipTypes.cs" />
+    <Compile Include="Migrations\201707081121479_SetNameOfMembershipTypes.Designer.cs">
+      <DependentUpon>201707081121479_SetNameOfMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -330,6 +334,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707081119036_AddNameToMembershipType.resx">
       <DependentUpon>201707081119036_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707081121479_SetNameOfMembershipTypes.resx">
+      <DependentUpon>201707081121479_SetNameOfMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
