--- a/VidRen/VidRen.csproj
+++ b/VidRen/VidRen.csproj
@@ -216,6 +216,14 @@
     <Compile Include="Migrations\201707081059197_ApplyDataAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201707081059197_ApplyDataAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707081146490_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201707081146490_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201707081146490_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707081147518_SeedMembershipTypeNames.cs" />
+    <Compile Include="Migrations\201707081147518_SeedMembershipTypeNames.Designer.cs">
+      <DependentUpon>201707081147518_SeedMembershipTypeNames.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -323,6 +331,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707081059197_ApplyDataAnnotationsToCustomerName.resx">
       <DependentUpon>201707081059197_ApplyDataAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707081146490_AddNameToMembershipType.resx">
+      <DependentUpon>201707081146490_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707081147518_SeedMembershipTypeNames.resx">
+      <DependentUpon>201707081147518_SeedMembershipTypeNames.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
