--- a/VidRen/VidRen.csproj
+++ b/VidRen/VidRen.csproj
@@ -224,6 +224,10 @@
     <Compile Include="Migrations\201707081147518_SeedMembershipTypeNames.Designer.cs">
       <DependentUpon>201707081147518_SeedMembershipTypeNames.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707081153227_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201707081153227_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201707081153227_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -337,6 +341,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707081147518_SeedMembershipTypeNames.resx">
       <DependentUpon>201707081147518_SeedMembershipTypeNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707081153227_AddBirthdateToCustomer.resx">
+      <DependentUpon>201707081153227_AddBirthdateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
