--- a/VidRen/VidRen.csproj
+++ b/VidRen/VidRen.csproj
@@ -228,9 +228,18 @@
     <Compile Include="Migrations\201707081153227_AddBirthdateToCustomer.Designer.cs">
       <DependentUpon>201707081153227_AddBirthdateToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707081208471_AddMovie.cs" />
+    <Compile Include="Migrations\201707081208471_AddMovie.Designer.cs">
+      <DependentUpon>201707081208471_AddMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707081209571_SeedGenres.cs" />
+    <Compile Include="Migrations\201707081209571_SeedGenres.Designer.cs">
+      <DependentUpon>201707081209571_SeedGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -301,6 +310,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -344,6 +354,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707081153227_AddBirthdateToCustomer.resx">
       <DependentUpon>201707081153227_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707081208471_AddMovie.resx">
+      <DependentUpon>201707081208471_AddMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707081209571_SeedGenres.resx">
+      <DependentUpon>201707081209571_SeedGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
